--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "ddc1104a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "# FILE1 = os.path.join(\"raw_data\", \"Audible_Catlog.csv\")\n",
+    "# FILE2 = os.path.join(\"raw_data\", \"Audible_Catlog_Advanced_Features.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "16bfa28c",
    "metadata": {},
    "outputs": [
@@ -114,7 +116,7 @@
    ],
    "source": [
     "df1=pd.read_csv('raw_data/Audible_Catlog_Advanced_Features.csv')\n",
-    "df2=pd.read_csv('raw_data/Audible_Catlog.csv')\n",
+    "# df2=pd.read_csv('raw_data/Audible_Catlog.csv')\n",
     "df1.describe()"
    ]
   },
