--- a/raw_data/ed.ipynb
+++ b/raw_data/ed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "3e9835cc",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "268fd85b",
    "metadata": {},
    "outputs": [
@@ -37,80 +37,107 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>﻿Book Name</th>\n",
+       "      <th>Book Name</th>\n",
        "      <th>Author</th>\n",
        "      <th>Rating</th>\n",
        "      <th>Number of Reviews</th>\n",
        "      <th>Price</th>\n",
        "      <th>Description</th>\n",
        "      <th>Listening Time</th>\n",
-       "      <td>Ranks and Genre</td>\n",
+       "      <th>Ranks and Genre</th>\n",
        "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Think Like a Monk: The Secret of How to Harness the Power of Positivity and Be Happy Now</th>\n",
-       "      <th>Jay Shetty</th>\n",
-       "      <th>4.9</th>\n",
-       "      <th>371</th>\n",
-       "      <th>10080</th>\n",
-       "      <th>Over the past three years, Jay Shetty has become one of the world’s most popular influencers. One of his clips was the most watched video on Facebook last year, with more than 360 million views. His social media following totals more than 32 million, he has produced more than 400 viral videos which have amassed more than five billion views, and his podcast, On Purpose, is consistently ranked the world’s number one health-related podcast.</th>\n",
-       "      <th>10 hours and 54 minutes</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Think Like a Monk: The Secret of How to Harnes...</td>\n",
+       "      <td>Jay Shetty</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>371.0</td>\n",
+       "      <td>10080</td>\n",
+       "      <td>Over the past three years, Jay Shetty has beco...</td>\n",
+       "      <td>10 hours and 54 minutes</td>\n",
        "      <td>,#1 in Audible Audiobooks &amp; Originals (See Top...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Ikigai: The Japanese Secret to a Long and Happy Life</th>\n",
-       "      <th>Héctor García</th>\n",
-       "      <th>4.6</th>\n",
-       "      <th>3682</th>\n",
-       "      <th>615</th>\n",
-       "      <th>Brought to you by Penguin.</th>\n",
-       "      <th>3 hours and 23 minutes</th>\n",
+       "      <th>1</th>\n",
+       "      <td>Ikigai: The Japanese Secret to a Long and Happ...</td>\n",
+       "      <td>Héctor García</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3682.0</td>\n",
+       "      <td>615</td>\n",
+       "      <td>Brought to you by Penguin.</td>\n",
+       "      <td>3 hours and 23 minutes</td>\n",
        "      <td>,#2 in Audible Audiobooks &amp; Originals (See Top...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>The Subtle Art of Not Giving a F*ck: A Counterintuitive Approach to Living a Good Life</th>\n",
-       "      <th>Mark Manson</th>\n",
-       "      <th>4.4</th>\n",
-       "      <th>20306</th>\n",
-       "      <th>10378</th>\n",
-       "      <th>In this generation-defining self-help guide, a superstar blogger cuts through the crap to show us how to stop trying to be positive all the time so that we can truly become better, happier people.</th>\n",
-       "      <th>5 hours and 17 minutes</th>\n",
+       "      <th>2</th>\n",
+       "      <td>The Subtle Art of Not Giving a F*ck: A Counter...</td>\n",
+       "      <td>Mark Manson</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>20306.0</td>\n",
+       "      <td>10378</td>\n",
+       "      <td>In this generation-defining self-help guide, a...</td>\n",
+       "      <td>5 hours and 17 minutes</td>\n",
        "      <td>,#3 in Audible Audiobooks &amp; Originals (See Top...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Atomic Habits: An Easy and Proven Way to Build Good Habits and Break Bad Ones</th>\n",
-       "      <th>James Clear</th>\n",
-       "      <th>4.6</th>\n",
-       "      <th>4678</th>\n",
-       "      <th>888</th>\n",
-       "      <th>Brought to you by Penguin.</th>\n",
-       "      <th>5 hours and 35 minutes</th>\n",
+       "      <th>3</th>\n",
+       "      <td>Atomic Habits: An Easy and Proven Way to Build...</td>\n",
+       "      <td>James Clear</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>4678.0</td>\n",
+       "      <td>888</td>\n",
+       "      <td>Brought to you by Penguin.</td>\n",
+       "      <td>5 hours and 35 minutes</td>\n",
        "      <td>,#5 in Audible Audiobooks &amp; Originals (See Top...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Life's Amazing Secrets: How to Find Balance an...</td>\n",
+       "      <td>Gaur Gopal Das</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>4308.0</td>\n",
+       "      <td>1005</td>\n",
+       "      <td>Stop going through life,  Start growing throug...</td>\n",
+       "      <td>6 hours and 25 minutes</td>\n",
+       "      <td>,#6 in Audible Audiobooks &amp; Originals (See Top...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                                                                                                                                                                 <<<<<<< HEAD\n",
-       "﻿Book Name                                         Author        Rating Number of Reviews Price Description                                        Listening Time                                             Ranks and Genre\n",
-       "Think Like a Monk: The Secret of How to Harness... Jay Shetty    4.9    371               10080 Over the past three years, Jay Shetty has becom... 10 hours and 54 minutes  ,#1 in Audible Audiobooks & Originals (See Top...\n",
-       "Ikigai: The Japanese Secret to a Long and Happy... Héctor García 4.6    3682              615   Brought to you by Penguin.                         3 hours and 23 minutes   ,#2 in Audible Audiobooks & Originals (See Top...\n",
-       "The Subtle Art of Not Giving a F*ck: A Counteri... Mark Manson   4.4    20306             10378 In this generation-defining self-help guide, a ... 5 hours and 17 minutes   ,#3 in Audible Audiobooks & Originals (See Top...\n",
-       "Atomic Habits: An Easy and Proven Way to Build ... James Clear   4.6    4678              888   Brought to you by Penguin.                         5 hours and 35 minutes   ,#5 in Audible Audiobooks & Originals (See Top..."
+       "                                           Book Name          Author  Rating  \\\n",
+       "0  Think Like a Monk: The Secret of How to Harnes...      Jay Shetty     4.9   \n",
+       "1  Ikigai: The Japanese Secret to a Long and Happ...   Héctor García     4.6   \n",
+       "2  The Subtle Art of Not Giving a F*ck: A Counter...     Mark Manson     4.4   \n",
+       "3  Atomic Habits: An Easy and Proven Way to Build...     James Clear     4.6   \n",
+       "4  Life's Amazing Secrets: How to Find Balance an...  Gaur Gopal Das     4.6   \n",
+       "\n",
+       "   Number of Reviews  Price  \\\n",
+       "0              371.0  10080   \n",
+       "1             3682.0    615   \n",
+       "2            20306.0  10378   \n",
+       "3             4678.0    888   \n",
+       "4             4308.0   1005   \n",
+       "\n",
+       "                                         Description           Listening Time  \\\n",
+       "0  Over the past three years, Jay Shetty has beco...  10 hours and 54 minutes   \n",
+       "1                         Brought to you by Penguin.   3 hours and 23 minutes   \n",
+       "2  In this generation-defining self-help guide, a...   5 hours and 17 minutes   \n",
+       "3                         Brought to you by Penguin.   5 hours and 35 minutes   \n",
+       "4  Stop going through life,  Start growing throug...   6 hours and 25 minutes   \n",
+       "\n",
+       "                                     Ranks and Genre  \n",
+       "0  ,#1 in Audible Audiobooks & Originals (See Top...  \n",
+       "1  ,#2 in Audible Audiobooks & Originals (See Top...  \n",
+       "2  ,#3 in Audible Audiobooks & Originals (See Top...  \n",
+       "3  ,#5 in Audible Audiobooks & Originals (See Top...  \n",
+       "4  ,#6 in Audible Audiobooks & Originals (See Top...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,6 +145,35 @@
    "source": [
     "df=pd.read_csv('Audible_Catlog_Advanced_Features.csv')\n",
     "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6bbf3a35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Book Name              0\n",
+       "Author                 0\n",
+       "Rating                 0\n",
+       "Number of Reviews    421\n",
+       "Price                  0\n",
+       "Description            6\n",
+       "Listening Time         0\n",
+       "Ranks and Genre        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
    ]
   }
  ],
